--- a/Aufgabe_4/theme4.css
+++ b/Aufgabe_4/theme4.css
@@ -1,8 +1,14 @@
+*{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+[title~=Preis]{
+    font-weight: bolder;
+}
 body{
     background-image: url(grid.jpg);
     margin: 0;
     padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 .head{
     position: sticky;
