--- a/Aufgabe_4/theme4.css
+++ b/Aufgabe_4/theme4.css
@@ -1,6 +1,9 @@
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    
+}
+html{
+    width: 100%;
 }
 body{
     background-image: url(grid.jpg);
