--- a/Portfolio_CJS/design_portfolio.css
+++ b/Portfolio_CJS/design_portfolio.css
@@ -70,7 +70,7 @@ h2{
 #body{ background-color: #F2F2F2;
     display: grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
-    grid-template-rows: 36% 7% 50% 7% auto 7% auto 7% auto 7% auto auto;
+    grid-template-rows: 36% 7% 50% 7% auto 7% auto 7% auto 7% auto auto auto auto;
     text-align: center;
    
 }
@@ -219,9 +219,23 @@ background-color: #385D84;
 #body1 img[alt="home"], .home img{
     width: 150px;
 }
+.h3_6{
+    grid-row: 12/13;
+    grid-column: 1/4;
+    background-color: #385D84;
+    padding-left: 2em;
+}
+.anzeige{
+    grid-row: 13/14;
+    grid-column: 1/4;
+}
+.anzeige img{
+    height: 240px;
+    margin: 10px 0;
+}
 footer{
     background-color: #385D84;
-    grid-row: 12/13;
+    grid-row: 14/15;
     grid-column: 1/4;
     margin-top: 10px;
 }
