--- a/IceCreamLand/responsivetheme.css
+++ b/IceCreamLand/responsivetheme.css
@@ -14,7 +14,8 @@ div#lineart{
     right: 20%;
     bottom: 5%;
     font-size: 40px;
-    font-family: Brush Script MT, Brush Script Std;
+    font-family: 'Damion', cursive;
+
 }
 #side{
    height: 400px;
@@ -110,10 +111,15 @@ h1{
     text-align: center;
     color: white;
     font-size: 30px;
-    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-family: 'Damion', cursive;
+
+    font-weight: 100;
     padding-top: 50px;
 }
 h1#fighter{
+    padding-top: 20px;
+}
+#saucetopping > h1{
     padding-top: 20px;
 }
 h2.sortentext {
@@ -127,7 +133,9 @@ h2{
     text-align: center;
     color: white;
     font-size: 25px;
-    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-weight: 100;
+    font-family: 'Damion', cursive;
+
 }
 /*div größen*/
 #start, #becher, #kugel, #eis, #saucetopping,#order, #realtoppingss{
@@ -315,6 +323,9 @@ button{
 }
 
 @media screen and (min-width:641px) {
+#saucetopping h2{
+    font-size: 40px;
+}
 h2.sortentext {
     font-weight: 100;
     font-size: 60px;
@@ -365,6 +376,9 @@ h2.sortentext {
     width: 100vw;
     height: 100vh;
 }
+#start, #becher, #kugel{
+    overflow: hidden;
+}
 #lineart {
     width: 150px;
     top: 20%;
@@ -379,9 +393,11 @@ h2{
     display: block;
     margin: 0;
     padding: 0;
+   
 }
 #becher img[alt = "head"],  #kugel img[alt = "head"]{
-    height: 250px;
+    height: 250px; 
+    overflow: hidden;
 }
 #becher h1{
     color: white;
@@ -453,10 +469,11 @@ button#surprise {
     height: 40px;
     font-size: x-large;
     position: absolute;
-    left: 39.5%;
-    margin-right: 50px;
+    top: 75%;
+    left: 45%;
+    margin-right: -50px;
     margin-top: 70px;
-    transform:translate(-50px -50px);
+    transform: translate(-50px, -50px);
 }
 #surprisememe img{
     width: 300px;
@@ -544,7 +561,8 @@ div#lineart{
     right: 20%;
     bottom: 5%;
     font-size: 40px;
-    font-family: Brush Script MT, Brush Script Std;
+    font-family: 'Damion', cursive;
+
 }
 .sauce h1, .topp h1{
     padding: 0;
@@ -582,8 +600,9 @@ div#lineart{
 #becher h1{
     color: #FED9F6;
     position: absolute;
-    top: 0;
-    left: 40%;
+    top: 7%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
 }
 #auswahl img{height: 500px;}
@@ -750,12 +769,14 @@ button#abgeben:hover{
     font-weight: 500;
 }
 button#surprise{
-    width: 170px;
-    height: 40px;
+    /* width: 170px; */
+    /* height: 40px; */
     font-size: x-large;
-    position: static;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* position: static;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
 }
 #exit{
     margin-top: 20px;
