--- a/IceCreamLand/design.css
+++ b/IceCreamLand/design.css
@@ -12,8 +12,50 @@
     height:100%;
     background-size: cover;
 }
+#becher, #eis, #realtoppings{
+    background-color: rgb(255, 217, 246);
+    position: relative;
+}
+#kugel, #saucetopping, #order{
+    background-color: rgb(204, 224, 255);
+    position: relative;
+}
+#start img[alt="head"], #becher img[alt = "head"],  #kugel img[alt = "head"]{
+    display: none;
+}
+#start img{
+    height: 300px;
+    display: block; 
+    margin: 0 auto;
+    padding: 80px 0px 50px;
+}
 }
 @media screen and (min-width:641px) {
 }
 @media screen and (min-width:1025px) {
+}
+#start img[alt="head"], #becher img[alt = "head"],  #kugel img[alt = "head"]{
+    height: 250px;
+    /* width: 100%; */
+}
+#auswahl{
+    justify-content: space-evenly;
+    margin: 20px 200px 0;
+} 
+#lineart_container{
+    position: relative;
+    z-index: 1;
+    width: 300px; 
+    margin-left: 0;  
+}
+#side{
+    height: 400px;
+    width: 300px;
+    left: 0%;
+}
+#lineart {
+    left: -3%;
+    width: 85px;
+    width: 200px;
+    margin: 60px 0px 20px 50px;
 }
