--- a/IceCreamLand/responsivetheme.css
+++ b/IceCreamLand/responsivetheme.css
@@ -8,7 +8,6 @@
     z-index: 1;
     width: 300px;   
 }
-
 #reminder{
     position: absolute;
     right: 20%;
@@ -16,6 +15,9 @@
     font-size: 40px;
     font-family: 'Damion', cursive;
 
+}
+.flavour{
+    border-radius: 100px;
 }
 #side{
    height: 400px;
@@ -49,6 +51,12 @@ input:focus{
 }
 @media screen and (min-width:320px) {
 /* Kugeln */
+.home{
+    width: 30px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 .toppingonice{
     top: 0;
     left: 9%;
@@ -126,7 +134,7 @@ h1{
 h1#fighter{
     padding-top: 20px;
 }
-#saucetopping > h1{
+#saucetopping > h1, #realtoppings > h1{
     padding-top: 20px;
 }
 h2.sortentext {
@@ -331,6 +339,9 @@ button{
 }
 
 @media screen and (min-width:641px) {
+.home{
+    width: 40px;
+}
 #saucetopping h2{
     font-size: 40px;
 }
@@ -509,7 +520,7 @@ button#surprise {
     width: 90px;
     position: absolute;
     top: 2%;
-    left: 27%;
+    left: 22%;
 }
 #side{
     height: 400px;
@@ -529,33 +540,28 @@ button#surprise {
     width: 120px;
     height: 120px;
     border-radius: 100px;
-} 
-#kugel1{
     position: absolute;
-    top: 10%;
-    left: 6%;
     background-size: cover;
     background-color: white;
+} 
+#kugel1{
+    top: 10%;
+    left: 6%;
 }
-#kugel2{position: absolute;
+#kugel2{
     top: 10%;
     left: 43%;
     background-color: rgb(250, 250, 250);
-    background-size: cover;
 }
 #kugel3{
-    position: absolute;
     top: 0%;
     left: 26%; 
     background-color: rgb(240, 240, 240);
-    background-size: cover;
 }
 #kugel4{
-    position: absolute;
     top: 0%;
     left: 40%; 
     background-color: rgb(230, 230, 230);
-    background-size: cover;
 }
 #lineart_container{
     /* position: relative; */
@@ -596,11 +602,11 @@ button#surprise {
     height: 100vh;
 }
 #start img[alt="head"], #becher img[alt = "head"],  #kugel img[alt = "head"]{
-    height: 225px;
+    height: 29%;
     /* width: 100%; */
 }/*aaa*/
 #start img[alt="logo"]{
-    padding: 0px 30px 30px;
+    padding: 0px 30px 20px;
 }
 #start p{
     display: block;
@@ -619,7 +625,8 @@ button#surprise {
 }
 #auswahl img{
     /* height: 500px; */
-    height: 475px;
+    height: 400px;
+
 }
 #auswahl{
     justify-content: space-evenly;
@@ -692,7 +699,10 @@ button#surprise {
     color:white;
 }
 h1#fighter{
-    padding-top: 50px;
+    padding-top:0%;
+}
+#saucetopping > h2{
+    font-size: 30px;
 }
 /*4*/
 #saucetopping{
@@ -737,6 +747,9 @@ form{
 #sorten p{
     color: black;
 }
+#sorten{
+    margin-top: 0;
+}
 .topper button{
     background-color: #CCE0FF;;
 }
@@ -765,13 +778,12 @@ form{
 #form button{
     width: 170px;
 }
-button#abgeben:hover{
+/* button#abgeben:hover{
     color: white;
     background-color: rgb(190,210,255);
     transition: ease-in-out;
     transition-duration: 1s;
-    
-}
+} */
 #staff p{
     color: rgb(204, 224, 255);
     background-color: white;
@@ -809,7 +821,7 @@ button#surprise{
     color: black;
     box-shadow: 0 0 40px 40px white inset, 0 0 0 0 white;
 }
-button#surprise:hover {
+button#surprise:hover, #form button:hover, #exit:hover {
     transition: all 500ms ease-in-out;
     color: black;
     box-shadow: 0 0 10px 0 white inset, 0 0 10px 4px white;
@@ -872,5 +884,23 @@ img#trash {
     margin-top: 100px;
     margin-bottom: auto;
     width: 100px
+}
+#start img[alt="logo"]{
+    padding: 0px 30px 2%;
+}
+#sorten{
+    margin-top: 2%;
+}
+#saucetopping h2{
+    font-size:50px;
+}
+#saucetopping > h1, #realtoppings > h1{
+    padding-top: 4%;
+}
+#auswahl img{
+    height: 500px;
+}
+.home{
+    width: 50px;
 }
 }
