--- a/IceCreamLand/responsivetheme.css
+++ b/IceCreamLand/responsivetheme.css
@@ -38,7 +38,7 @@
     margin: 0;
     width: auto;
     font-size: 50px;
-    font-weight: 150;
+    font-weight: 200;
 }
 button:focus{
     outline:none;
@@ -80,37 +80,33 @@ input:focus{
     top: 40%;
     left: 2%;
  }
-#kugel1, #kugel2, #kugel3, #kugel4{
+ #kugel1, #kugel2, #kugel3, #kugel4{
     width: 50px;
     height: 50px;
     border-radius: 50px;
+    position: absolute;
+    background-size: cover;
 }
 #kugel1{
-    position: absolute;
     top: 9%;
     left: 8%;
-    background-size: cover;
     background-color: white;
 }
-#kugel2{position: absolute;
+#kugel2{
     top: 9%;
     left: 40%;
     background-color: rgb(250, 250, 250);
-    background-size: cover;
+    
 }
 #kugel3{
-    position: absolute;
     top: 0%;
     left: 25%; 
     background-color: rgb(240, 240, 240);
-    background-size: cover;
 }
 #kugel4{
-    position: absolute;
     top: 0%;
     left: 40%; 
     background-color: rgb(230, 230, 230);
-    background-size: cover;
 }
 /* Kugeln ende */
 #lineart {
@@ -198,7 +194,7 @@ h2{
     display: none;
 }
 #start img{
-    height: 300px;
+    height: 30vh;
     display: block; 
     margin: 0 auto;
     padding: 80px 0px 50px;
@@ -214,7 +210,7 @@ h2{
     flex-flow: column wrap;
 }
 #auswahl img{
-    height: 180px;
+    height: 35vh;
     justify-content: center;
 }
 button{
@@ -269,7 +265,7 @@ button{
     flex: 1 0 40%;
 }
 #sauce h1, #top h1{
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 100;
 }
 .flavour > img, .topper > img, .sauce > img{
@@ -277,7 +273,7 @@ button{
     margin-right: auto;
     display: flex;
     align-content: center;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     width: 70px;
 }
 .flavour p, .topper p{
@@ -373,7 +369,6 @@ h2.sortentext {
 #kugel1, #kugel2, #kugel3, #kugel4{
     width: 80px;
     height: 80px;
-    border-radius: 50px;
 } 
 #kugel1{
     top: 9%;
@@ -392,7 +387,7 @@ h2.sortentext {
     left: 40%; 
 } 
 #start, #becher, #kugel, #eis, #saucetopping,#order, #realtoppingss{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 #start, #becher, #kugel{
@@ -444,9 +439,7 @@ button{
     
 }
 .next button{
-    position: absolute;
     bottom: 3%;
-    right: 46.5%;
 }
 .flavour > img, .topper > img, .sauce > img{
     width: 180px;
@@ -513,6 +506,9 @@ button#surprise {
     width: 25px;
     background-color: transparent;
 }
+.headline h1{
+    padding: 0;
+}
 .toppingonice img{
     width: 50px;
 }
@@ -540,9 +536,6 @@ button#surprise {
     width: 120px;
     height: 120px;
     border-radius: 100px;
-    position: absolute;
-    background-size: cover;
-    background-color: white;
 } 
 #kugel1{
     top: 10%;
@@ -592,7 +585,7 @@ button#surprise {
     margin: 0;
     width: auto;
     font-size: 50px;
-    font-weight: 150;
+    font-weight: 200;
 }
 #top h1{
     font-size: 50px;
@@ -621,13 +614,12 @@ button#surprise {
     top: 7%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
+    /* padding: 20px; */
 }
-#auswahl img{
-    /* height: 500px; */
-    height: 400px;
-
-}
+/* #auswahl img{
+    /* height: 500px; 
+    height: 30%;
+} */
 #auswahl{
     justify-content: space-evenly;
     margin: 0 200px ;
