--- a/IceCreamLand/design.css
+++ b/IceCreamLand/design.css
@@ -29,6 +29,35 @@
     margin: 0 auto;
     padding: 80px 0px 50px;
 }
+/**/
+#kugel1, #kugel2, #kugel3, #kugel4{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    position: absolute;
+    background-size: cover;
+}
+#kugel1{
+    top: 9%;
+    left: 8%;
+    background-color: white;
+}
+#kugel2{
+    top: 9%;
+    left: 40%;
+    background-color: rgb(250, 250, 250);
+    
+}
+#kugel3{
+    top: 0%;
+    left: 25%; 
+    background-color: rgb(240, 240, 240);
+}
+#kugel4{
+    top: 0%;
+    left: 40%; 
+    background-color: rgb(230, 230, 230);
+}
 }
 @media screen and (min-width:641px) {
 }
