--- a/IceCreamLand/responsivetheme.css
+++ b/IceCreamLand/responsivetheme.css
@@ -50,6 +50,9 @@ input:focus{
     bottom: 0;
     right: 0;
 }
+#orderhead{
+    padding-top: 20px;
+}
 #start .staff{
     height: 30px;
     padding: 5px;
@@ -297,7 +300,6 @@ button{
 }
 #form{
     text-align: center;
-    padding-top: 50px;
 }
 #form input{
     margin-bottom: 10px;
@@ -583,7 +585,7 @@ button#surprise {
     text-align: center;
     margin: 0;
     width: auto;
-    font-size: 50px;
+    font-size: 35px;
     font-weight: 200;
 }
 #top h1{
@@ -617,10 +619,9 @@ button#surprise {
 } 
 #auswahl img{
     /* height: 500px; */
-    height: 30%;
+    height: 60vh;
 } 
 #auswahl{
-    justify-content: space-evenly;
     margin: 0 200px ;
 } 
 #zahl{
@@ -717,7 +718,7 @@ h1#fighter{
 }
 form{
     font-size: 20px;
-    padding: 40px;
+    padding: 10px 40px 20px;
     text-align: center;
 }
 #form button{
