--- a/IceCreamLand/responsivetheme.css
+++ b/IceCreamLand/responsivetheme.css
@@ -8,13 +8,7 @@
     z-index: 1;
     width: 300px;   
 }
-#reminder{
-    position: absolute;
-    right: 20%;
-    bottom: 5%;
-    font-size: 40px;
-    font-family: 'Damion', cursive;
-}
+
 .flavour{
     border-radius: 100px;
 }
@@ -35,7 +29,9 @@ input:focus{
     width: 50px;
 }
 @media screen and (min-width:320px) {
-/* Kugeln */
+#reminder{
+    display: none;
+}
 #sauceimg.alignsauce3{
     top: 0%;
 }
@@ -345,16 +341,6 @@ button{
     height: 30px;
     width: 100px;
 }
-/* #exit{
-    
-    margin-top: 20px;
-    
-    position: absolute;
-    margin-top: 30px;
-    left: 50%;
-    margin-right: -50px;
-    transform: translate(-50%, -50%);
-} */
 #last_buttons{
     width: 100vw;
     display: flex;
@@ -687,6 +673,7 @@ button{
     margin: 60px 0px 20px 10px;
 }
 #reminder{
+    display: block;
     position: absolute;
     right:4%;
     bottom: 5%;
